SDKs/googleapis.com/androidpublisher/v1.1/typescript/README.md
# openapi

<!-- Start SDK Installation -->
## SDK Installation

### NPM

```bash
npm add openapi
```

### Yarn

```bash
yarn add openapi
```
<!-- End SDK Installation -->

<!-- Start SDK Example Usage -->
## SDK Example Usage

```typescript
import { SDK, WithSecurity} from "openapi";
import { AndroidpublisherInapppurchasesGetRequest, AndroidpublisherInapppurchasesGetResponse } from "openapi/src/sdk/models/operations";
import { AxiosError } from "axios";


const sdk = new SDK();
    
const req: AndroidpublisherInapppurchasesGetRequest = {
  security: {
    oauth2: {
      authorization: "Bearer YOUR_ACCESS_TOKEN_HERE",
    }
    oauth2c: {
      authorization: "Bearer YOUR_ACCESS_TOKEN_HERE",
    },
  },
  pathParams: {
    packageName: "omnis",
    productId: "enim",
    token: "aspernatur",
  },
  queryParams: {
    alt: "json",
    fields: "blanditiis",
    key: "perferendis",
    oauthToken: "voluptas",
    prettyPrint: true,
    quotaUser: "facilis",
    userIp: "explicabo",
  },
};

sdk.inapppurchases.androidpublisherInapppurchasesGet(req).then((res: AndroidpublisherInapppurchasesGetResponse | AxiosError) => {
   // handle response
});
```
<!-- End SDK Example Usage -->

<!-- Start SDK Available Operations -->
## SDK Available Operations

### inapppurchases

* `androidpublisherInapppurchasesGet` - Checks the purchase and consumption status of an inapp item.

### purchases

* `androidpublisherPurchasesCancel` - Cancels a user's subscription purchase. The subscription remains valid until its expiration time.
* `androidpublisherPurchasesGet` - Checks whether a user's subscription purchase is valid and returns its expiry time.

<!-- End SDK Available Operations -->

### SDK Generated by [Speakeasy](https://docs.speakeasyapi.dev/docs/using-speakeasy/client-sdks)
